force-app/main/default/objects/leankor__ItemApproval__c/leankor__ItemApproval__c.object-meta.xml
<CustomObject>
    <description>This object contains the records of items requested for approvals.</description>
    <label>Leankor Item Approval</label>
    <nameField>
        <displayFormat>API-{0000000000}</displayFormat>
        <label>Item Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leankor Item Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>