force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__Approval__c.field-meta.xml
<CustomField>
    <fullName>leankor__Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a reference to the parent approval (Approval)</description>
    <inlineHelpText>This is a reference to the parent approval</inlineHelpText>
    <label>Approval</label>
    <referenceTo>leankor__Approval__c</referenceTo>
    <relationshipLabel>Leankor Item Approvals</relationshipLabel>
    <relationshipName>ItemApprovals_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>