force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__ApprovalHistoryStatus__c.field-meta.xml
<CustomField>
    <fullName>leankor__ApprovalHistoryStatus__c</fullName>
    <description>The approval history status of the requested item</description>
    <inlineHelpText>The approval history status of the requested item</inlineHelpText>
    <label>Approval History Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>