force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__Approver__c.field-meta.xml
<CustomField>
    <fullName>leankor__Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who has the authority to implement the request</description>
    <inlineHelpText>The user who has the authority to implement the request</inlineHelpText>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ItemApprovals_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>