force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__Comments__c.field-meta.xml
<CustomField>
    <fullName>leankor__Comments__c</fullName>
    <description>Comments to requested item</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comments to requested item</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>