force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__DueDateTimeChange__c.field-meta.xml
<CustomField>
    <fullName>leankor__DueDateTimeChange__c</fullName>
    <description>The requested due date time to approve</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The requested due date time to approve</inlineHelpText>
    <label>Due Date Time Change</label>
    <type>DateTime</type>
</CustomField>