force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__DurationUnitChange__c.field-meta.xml
<CustomField>
    <fullName>leankor__DurationUnitChange__c</fullName>
    <description>The requested duration unit to approve in conjunction with the duration change</description>
    <inlineHelpText>The requested duration unit to approve in conjunction with the duration change</inlineHelpText>
    <label>Duration Unit Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>