force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__EstimatedDurationChange__c.field-meta.xml
<CustomField>
    <fullName>leankor__EstimatedDurationChange__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The requested duration to approve</description>
    <inlineHelpText>The requested duration to approve</inlineHelpText>
    <label>Estimated Duration Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>