force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a field reference to the card/activity (KanbanCard)</description>
    <inlineHelpText>This is a field reference to the card/activity</inlineHelpText>
    <label>Kanban Card</label>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Leankor Item Approvals</relationshipLabel>
    <relationshipName>ItemApprovals_KanbanCard</relationshipName>
    <type>Lookup</type>
</CustomField>