force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__OnHoldChange__c.field-meta.xml
<CustomField>
    <fullName>leankor__OnHoldChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Request to change the On Hold status of the item to this value</description>
    <inlineHelpText>Request to change the On Hold status of the item to this value</inlineHelpText>
    <label>On Hold Change</label>
    <type>Checkbox</type>
</CustomField>