force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__Requester__c.field-meta.xml
<CustomField>
    <fullName>leankor__Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who made the request</description>
    <inlineHelpText>The user who made the request</inlineHelpText>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ItemApprovals_Requester</relationshipName>
    <type>Lookup</type>
</CustomField>