force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__RequestType__c.field-meta.xml
<CustomField>
    <fullName>leankor__RequestType__c</fullName>
    <description>The type of request to approve</description>
    <inlineHelpText>The type of request to approve</inlineHelpText>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Date Time</fullName>
            </value>
            <value>
                <fullName>Duration</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Start Date Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>