force-app/main/default/objects/leankor__ItemApproval__c/fields/leankor__StartDateTimeChange__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDateTimeChange__c</fullName>
    <description>The requested start date time to approve</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The requested start date time to approve</inlineHelpText>
    <label>Start Date Time Change</label>
    <type>DateTime</type>
</CustomField>